<resources>
    <string name="app_name">Khana khajana</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="login">LogIN</string>
    <string name="password">Password</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="forgot_password">forgot password?</string>
    <string name="preference_file">Shared preference</string>
    <string name="name_min_3_characters">Name(min 3 characters)</string>
    <string name="register">Register</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="email_address">email address</string>
    <string name="enter_your_mobile_number_and_email_address_below">enter your mobile number and email address below</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="favourate_restaurants">Favourate Restaurants</string>
    <string name="order_history">Order history</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="rs_299">Rs. 299</string>
    <string name="name_of_the_dish">Name of the Dish</string>
    <string name="add">Add</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="_1_what_is_application">1. What is Application?</string>
    <string name="the_application_class_in_android_is_the_base_class_within_an_android_app_that_contains_all_other_components_such_as_activities_and_services">The Application class in Android is the base class within an Android app that contains all other components such as activities and services.</string>
    <string name="_2_what_is_context">2. What is Context?</string>
    <string name="a_context_is_a_handle_to_the_system_it_provides_services_like_resolving_resources_obtaining_access_to_databases_and_preferences">A Context is a handle to the system; it provides services like resolving resources, obtaining access to databases and preferences</string>
    <string name="_3_what_is_a_buildtype_in_gradle">3. What is a BuildType in Gradle?</string>
    <string name="_4_what_is_the_android_application_architecture">4. What is the Android Application Architecture?</string>
    <string name="_5_describe_activities">5. Describe activities</string>
    <string name="_6_scenario_in_which_only_ondestroy_is_called_for_an_activity_without_onpause_and_onstop">6. Scenario in which only onDestroy is called for an activity without onPause() and onStop()?</string>
    <string name="if_finish_is_called_in_the_oncreate_method_of_an_activity_the_system_will_invoke_ondestroy_method_directly">If finish() is called in the OnCreate method of an activity, the system will invoke onDestroy() method directly.</string>
    <string name="_7_how_does_the_activity_respond_when_the_user_rotates_the_screen">7. How does the activity respond when the user rotates the screen?</string>
    <string name="when_the_screen_is_rotated_the_current_instance_of_activity_is_destroyed_a_new_instance_of_the_activity_is_created_in_the_new_orientation">When the screen is rotated, the current instance of activity is destroyed a new instance of the Activity is created in the new orientation.</string>
    <string name="_8_describe_asynctask">8. Describe AsyncTask.</string>
    <string name="asynctask_allows_you_to_perform_asynchronous_work_on_your_user_interface_it_performs_the_blocking_operations_in_a_worker_thread_and_then_publishes_the_results_on_the_ui_thread">AsyncTask allows you to perform asynchronous work on your user interface. It performs the blocking operations in a worker thread and then publishes the results on the UI thread.</string>
    <string name="_9_describe_intentservice">9. Describe IntentService.</string>
    <string name="intentservice_is_a_base_class_for_services_that_handle_asynchronous_requests_expressed_as_intents_on_demand">IntentService is a base class for Services that handle asynchronous requests (expressed as Intents) on demand.</string>
    <string name="_10_describe_thread">10. Describe Thread</string>
    <string name="a_thread_is_a_single_sequential_flow_of_control_within_a_program_threads_can_be_thought_of_as_mini_processes_running_within_a_main_process">A thread is a single sequential flow of control within a program. Threads can be thought of as mini-processes running within a main process.</string>
    <string name="android_application_architecture_has_the_following_components_services_intent_resource_externalization_notification_content_providers">Android application architecture has the following components: Services, Intent, Resource Externalization, Notification, Content Providers.</string>
    <string name="build_types_define_properties_that_gradle_uses_when_building_and_packaging_your_android_app">Build types define properties that Gradle uses when building and packaging your Android app.</string>
    <string name="activities_are_basically_containers_or_windows_to_the_ui">activities are basically containers or windows to the UI.</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order_total">Place Order(Total )</string>
    <string name="separator">-</string>

    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!!!</string>
    <string name="ok">OK</string>
    <string name="restaurantname">RestaurantName</string>
    <string name="orderdate">OrderDate</string>
    <string name="name_of_the_restaurant">Name of the Restaurant</string>
    <string name="date">Date</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="use_unique_name_and_gmail">** use unique name and gmail:</string>
    <string name="use_unique_email_and_mobile_no">** use unique email and mobile no:</string>
    <string name="sort_by_name">sort by name</string>
    <string name="sort_by_price">sort by price</string>
    <string name="sort_by_rating">sort by rating</string>
</resources>