<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity2.MainActivity">
    <ImageView
        android:id="@+id/img1"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <EditText
        android:background="@drawable/stroke_box"
        android:padding="6dp"
        android:maxLines="1"
        android:maxLength="10"
        android:id="@+id/edtxt1"
        android:layout_marginTop="20dp"
        android:layout_below="@id/img1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"/>
    <EditText
        android:background="@drawable/stroke_box"
        android:padding="6dp"
        android:id="@+id/edtxt2"
        android:maxLength="8"
        android:layout_marginTop="30dp"
        android:layout_below="@id/edtxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:textSize="18sp"
        android:padding="0dp"
        android:layout_marginTop="40dp"
        android:id="@+id/btLogin"
        android:layout_below="@id/edtxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/purple_200"
        />
    <TextView
        android:textAllCaps="false"
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:layout_below="@id/btLogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="16sp"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>