<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragment.ProfileFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/myprofile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/myprofile"
        />

    <TextView

        android:id="@+id/dbName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myprofile"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="false"
        android:background="@drawable/stroke_box"
        android:padding="15dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/dbNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbName"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="false"
        android:background="@drawable/stroke_box"
        android:padding="15dp"
        android:text="@string/number" />

    <TextView
        android:id="@+id/dbEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbNumber"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="false"
        android:background="@drawable/stroke_box"
        android:padding="15dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/dbAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbEmail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="false"
        android:background="@drawable/stroke_box"
        android:padding="15dp"
        android:text="@string/delivery_address" />

</RelativeLayout>