<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="Fragment.FaqFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_what_is_application"
                    android:padding="10dp"
                    android:paddingStart="0dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/the_application_class_in_android_is_the_base_class_within_an_android_app_that_contains_all_other_components_such_as_activities_and_services"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:textColor="#000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_what_is_context"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_context_is_a_handle_to_the_system_it_provides_services_like_resolving_resources_obtaining_access_to_databases_and_preferences"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_what_is_a_buildtype_in_gradle"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_types_define_properties_that_gradle_uses_when_building_and_packaging_your_android_app"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_what_is_the_android_application_architecture"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_application_architecture_has_the_following_components_services_intent_resource_externalization_notification_content_providers"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_describe_activities"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_are_basically_containers_or_windows_to_the_ui"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_scenario_in_which_only_ondestroy_is_called_for_an_activity_without_onpause_and_onstop"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/if_finish_is_called_in_the_oncreate_method_of_an_activity_the_system_will_invoke_ondestroy_method_directly"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_how_does_the_activity_respond_when_the_user_rotates_the_screen"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_the_screen_is_rotated_the_current_instance_of_activity_is_destroyed_a_new_instance_of_the_activity_is_created_in_the_new_orientation"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_8_describe_asynctask"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asynctask_allows_you_to_perform_asynchronous_work_on_your_user_interface_it_performs_the_blocking_operations_in_a_worker_thread_and_then_publishes_the_results_on_the_ui_thread"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9_describe_intentservice"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intentservice_is_a_base_class_for_services_that_handle_asynchronous_requests_expressed_as_intents_on_demand"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10_describe_thread"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_thread_is_a_single_sequential_flow_of_control_within_a_program_threads_can_be_thought_of_as_mini_processes_running_within_a_main_process"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>