<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity2.ForgotActivity">
    <ImageView
        android:id="@+id/imgBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="15dp"/>

    <ImageView
        android:id="@+id/img1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number_and_email_address_below"
        android:id="@+id/fogotPasswordRequest"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_below="@id/img1"
        android:layout_marginTop="10dp"/>
    <EditText

        android:background="@drawable/stroke_box"
        android:padding="6dp"
        android:maxLines="1"
        android:maxLength="10"
        android:id="@+id/edtForgotPhoneNumber"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        android:layout_below="@id/fogotPasswordRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"/>
    <EditText
        android:background="@drawable/stroke_box"
        android:padding="6dp"
        android:id="@+id/edtForgotEmail"
        android:layout_marginTop="30dp"
        android:layout_below="@id/edtForgotPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"/>
    <Button
        android:textSize="18sp"
        android:padding="0dp"
        android:layout_marginTop="40dp"
        android:id="@+id/btNext"
        android:layout_below="@id/edtForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_200"
        />

</RelativeLayout>