<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="1"
                android:textColor="#000000"
                android:padding="5dp"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="2.8"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/name_of_the_dish"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtDishPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/rs_299"
                android:layout_below="@id/txtDishName"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#c0c0c0"/>
        </RelativeLayout>


        <!--Many times we see that texts have an image along with them to
        their right or left. This is added with the help of the
        drawableLeft (or drawableRight and so on) attribute-->

        <RelativeLayout
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAddRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:backgroundTint="@color/purple_200"
                android:layout_margin="10dp" />

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>